--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
   <header>
     <h1>Hoş Geldiniz!</h1>
     <nav>
-      <ul>
+      <div id="hamburger-menu">&#9776;</div>
+      <ul id="nav-links">
         <li><a href="#">Anasayfa</a></li>
-        <li><a href="#">Menü</a></li>
-        <li><a href="#">İletişim</a></li>
+        <li><a href="#menu">Menü</a></li>
+        <li><a href="#rezervasyon">Randevu Al</a></li>
+        <li><a href="#iletisim">İletişim</a></li>
       </ul>
     </nav>
   </header>
@@ -21,6 +23,7 @@
   <section id="menu">
     <h2>Menü</h2>
     <div class="menu-item">
+      <img src="yemek1.jpg" alt="Yemek 1">
       <h3>Yemek 1</h3>
       <p>Açıklama...</p>
       <p>Fiyat: ₺XX</p>
@@ -31,7 +34,25 @@
       <p>Fiyat: ₺XX</p>
     </div>
   </section>
-
+  <section id="rezervasyon">
+    <h2>Randevu Al</h2>
+    <form id="rezervasyon-formu">
+      <label for="isim">İsim:</label>
+      <input type="text" id="isim" name="isim" required>
+  
+      <label for="email">E-posta:</label>
+      <input type="email" id="email" name="email" required>
+  
+      <label for="tarih">Tarih:</label>
+      <input type="date" id="tarih" name="tarih" required>
+  
+      <label for="kisi">Kişi Sayısı:</label>
+      <input type="number" id="kisi" name="kisi" min="1" required>
+  
+      <button type="submit">Randevu Al</button>
+    </form>
+    <p id="tesekkur-mesaji" style="display: none;">Rezervasyonunuz alındı! Teşekkür ederiz.</p>
+  </section>
   <footer>
     <p>İletişim: info@restoran.com | Tel: 0123 456 78 90</p>
   </footer>
